--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,17 @@
 // app global css in SCSS form
+html {
+  background-color: #f3f6fa;
+}
+
+a {
+  color: $primary;
+}
+
+a:link {
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.shadow {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.03), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
