Revert some changes, added remember me checkbox

--- a/src/css/auth.scss
+++ b/src/css/auth.scss
@@ -31,5 +31,5 @@
   }
 }
 .bg-img {
-  background-image: linear-gradient(135deg, #5fe788 0%, #151d91 100%);
+  background-image: linear-gradient(135deg, #5fc3e7 0%, #151d91 100%);
 }
