--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -21,6 +21,11 @@ a:link {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.03), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
+.container {
+  background-color: white;
+  border-radius: 5px;
+}
+
 .main-padding {
   body.screen--xs & {
     padding: 1rem 1rem;
@@ -43,8 +48,8 @@ a:link {
 }
 
 .text-grey-color {
-  color: #7585a4;
+  color: #677797;
 }
 .bg-grey-color {
-  background: #7585a4;
+  background: #677797;
 }
