--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -18,7 +18,9 @@ a:link {
 }
 
 .shadow {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.03), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow:
+    0 12px 16px 0 rgba(0, 0, 0, 0.03),
+    0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .container {
