Add device to module

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -23,6 +23,10 @@ a:link {
     0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
+.outline {
+  border: 1px solid #e0e0e0;
+}
+
 .container {
   background-color: white;
   border-radius: 5px;
