--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,9 +1,5 @@
 // app global css in SCSS form
-@font-face {
-  font-family: 'Inter';
-  src: url('../fonts/Inter-VariableFont.ttf') format('truetype');
-  font-display: swap;
-}
+@import url('../fonts/inter/inter.css');
 
 html {
   background-color: #f3f6fa;
