--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -26,4 +26,4 @@ $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
 
-$typography-font-family: 'Inter';
+$typography-font-family: 'InterVariable';
