--- a/src/css/auth.scss
+++ b/src/css/auth.scss
@@ -1,14 +1,20 @@
 .auth-bg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+
   body.screen--xs & {
     background-color: white;
   }
 
   .auth-container {
+    width: 100%;
     max-width: 26rem;
     border-radius: 0.3rem;
     background-color: #ffffff;
     padding: 1rem 3rem;
-    margin: 10rem auto;
+    margin-top: -8vh;
 
     h1 {
       font-size: 1.6rem;
@@ -27,6 +33,8 @@
     body.screen--xs & {
       box-shadow: none;
       border: none;
+      padding: 1rem 1.5rem;
+      margin-top: 0;
     }
   }
 }
